// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GameManager /> renders Game when in game 1`] = `
<ForwardRef(Box)
  display="flex"
>
  <GameSpeedDial />
  <ForwardRef(Box)
    width="100%"
  >
    <Game />
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`<GameManager /> renders StartGame when not in game 1`] = `
<ForwardRef(Box)
  display="flex"
>
  <GameSpeedDial />
  <ForwardRef(Box)
    width="100%"
  >
    <StartGame />
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`<GameManager /> renders redirect when not in game 1`] = `
<Navigate
  replace={true}
  to="/game/gameId/join"
/>
`;
